# ripples-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ripples/: __init__.py  client.py  errors.py
src/ripples_python.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ripples.py
